{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 56,
  "lineage": "8a396201-6adf-6fee-eeae-893993e03376",
  "resources": [
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:network-acl/acl-06416eacf15637b6f",
            "default_network_acl_id": "acl-06416eacf15637b6f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06416eacf15637b6f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "275252031212",
            "subnet_ids": [
              "subnet-00757f68aed21b130",
              "subnet-06ab3b98502e2bf7a"
            ],
            "tags": {
              "Name": "prod-vpc-ireland-default"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-default"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:route-table/rtb-0013eba7196040d7c",
            "default_route_table_id": "rtb-0013eba7196040d7c",
            "id": "rtb-0013eba7196040d7c",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-vpc-ireland-default"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:security-group/sg-0a67ac03fe9d4b8c4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a67ac03fe9d4b8c4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "275252031212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-vpc-ireland-default"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-default"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:internet-gateway/igw-0fc0df99aa1b956fa",
            "id": "igw-0fc0df99aa1b956fa",
            "owner_id": "275252031212",
            "tags": {
              "Name": "prod-vpc-ireland"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc0df99aa1b956fa",
            "id": "r-rtb-0c972a09b237c11e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c972a09b237c11e7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ireland.aws_internet_gateway.this",
            "module.vpc_ireland.aws_route_table.public",
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:route-table/rtb-0c972a09b237c11e7",
            "id": "rtb-0c972a09b237c11e7",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc0df99aa1b956fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-ireland-public"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fd4876ef800ce66",
            "route_table_id": "rtb-0c972a09b237c11e7",
            "subnet_id": "subnet-06ab3b98502e2bf7a"
          },
          "dependencies": [
            "module.vpc_ireland.aws_route_table.public",
            "module.vpc_ireland.aws_subnet.public",
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9324893e3380f03",
            "route_table_id": "rtb-0c972a09b237c11e7",
            "subnet_id": "subnet-00757f68aed21b130"
          },
          "dependencies": [
            "module.vpc_ireland.aws_route_table.public",
            "module.vpc_ireland.aws_subnet.public",
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:subnet/subnet-06ab3b98502e2bf7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab3b98502e2bf7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-ireland-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-public-eu-west-1a"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:subnet/subnet-00757f68aed21b130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00757f68aed21b130",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-ireland-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland-public-eu-west-1b"
            },
            "vpc_id": "vpc-0c7950a1a3dfd1123"
          },
          "dependencies": [
            "module.vpc_ireland.aws_vpc.this",
            "module.vpc_ireland.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ireland",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_ireland",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275252031212:vpc/vpc-0c7950a1a3dfd1123",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06416eacf15637b6f",
            "default_route_table_id": "rtb-0013eba7196040d7c",
            "default_security_group_id": "sg-0a67ac03fe9d4b8c4",
            "dhcp_options_id": "dopt-38bda65a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7950a1a3dfd1123",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0013eba7196040d7c",
            "owner_id": "275252031212",
            "tags": {
              "Name": "prod-vpc-ireland"
            },
            "tags_all": {
              "Name": "prod-vpc-ireland"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:network-acl/acl-02133b27f2e51148d",
            "default_network_acl_id": "acl-02133b27f2e51148d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02133b27f2e51148d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "275252031212",
            "subnet_ids": [
              "subnet-036d3cfababf61c31",
              "subnet-03f8e623163fd8f70"
            ],
            "tags": {
              "Name": "prod-vpc-london-default"
            },
            "tags_all": {
              "Name": "prod-vpc-london-default"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_london.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-095285995f34cfafa",
            "default_route_table_id": "rtb-095285995f34cfafa",
            "id": "rtb-095285995f34cfafa",
            "owner_id": "275252031212",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "prod-vpc-london-default"
            },
            "tags_all": {
              "Name": "prod-vpc-london-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_london.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:security-group/sg-0f1b731213bcccd4f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f1b731213bcccd4f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "275252031212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-vpc-london-default"
            },
            "tags_all": {
              "Name": "prod-vpc-london-default"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_london.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:internet-gateway/igw-0b460df0acf661952",
            "id": "igw-0b460df0acf661952",
            "owner_id": "275252031212",
            "tags": {
              "Name": "prod-vpc-london"
            },
            "tags_all": {
              "Name": "prod-vpc-london"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "dependencies": [
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b460df0acf661952",
            "id": "r-rtb-06da89021282338c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06da89021282338c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_london.aws_internet_gateway.this",
            "module.vpc_london.aws_route_table.public",
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-06da89021282338c2",
            "id": "rtb-06da89021282338c2",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-vpc-london-public"
            },
            "tags_all": {
              "Name": "prod-vpc-london-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03264c443f1088383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccaf7f4b7f3f1180",
            "route_table_id": "rtb-06da89021282338c2",
            "subnet_id": "subnet-036d3cfababf61c31"
          },
          "dependencies": [
            "module.vpc_london.aws_route_table.public",
            "module.vpc_london.aws_subnet.public",
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cddd7a8fd48223b7",
            "route_table_id": "rtb-06da89021282338c2",
            "subnet_id": "subnet-03f8e623163fd8f70"
          },
          "dependencies": [
            "module.vpc_london.aws_route_table.public",
            "module.vpc_london.aws_subnet.public",
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-036d3cfababf61c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d3cfababf61c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-london-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "prod-vpc-london-public-eu-west-2a"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "dependencies": [
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-03f8e623163fd8f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8e623163fd8f70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-london-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "prod-vpc-london-public-eu-west-2b"
            },
            "vpc_id": "vpc-03264c443f1088383"
          },
          "dependencies": [
            "module.vpc_london.aws_vpc.this",
            "module.vpc_london.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_london",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].prod_london",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:vpc/vpc-03264c443f1088383",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-02133b27f2e51148d",
            "default_route_table_id": "rtb-095285995f34cfafa",
            "default_security_group_id": "sg-0f1b731213bcccd4f",
            "dhcp_options_id": "dopt-365e355e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03264c443f1088383",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095285995f34cfafa",
            "owner_id": "275252031212",
            "tags": {
              "Name": "prod-vpc-london"
            },
            "tags_all": {
              "Name": "prod-vpc-london"
            }
          }
        }
      ]
    }
  ]
}